--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,20 +9,21 @@ edition = "2021"
 cfg-if = "1"
 
 # WGPU and Window
-wgpu = "0.18.0"
-winit = "0.28"
+wgpu = "0.19.1"
+winit = "0.29.10"
 
 # Logging (wgpu required)
-log = "0.4"
+logfather = "0.2.3"
 env_logger = "0.10"
 
 # Async
 pollster = "0.3"
 
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
 console_log = "1.0"
-wgpu = { version = "0.18", features = ["webgl"]}
+wgpu = { version = "0.19.1", features = ["webgl"]}
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = [
